log/build_2024-02-15_01-26-17/mypkg/stderr.log
  File "/home/yamashita/car_ws/install/mypkg/lib/python3.10/site-packages/mypkg/receiver.py", line 126
    coord = Measure_Distance(i[0:1],i[2]))
                                         ^
SyntaxError: unmatched ')'

